--- a/deso1.tex
+++ b/deso1.tex
@@ -1,7 +1,8 @@
+\onehalfspacing
 \section{Đề số 1}
 
 \begin{bt}
-    
+    \hfill
     \begin{enumerate}[a.]
         \item Thực hiện phép tính: $\frac{0,375-0,3+\frac{3}{11}+\frac{3}{12}}{-0,265+0,5-\frac{5}{11}-\frac{5}{12}}+\frac{1,5+1-0,75}{2,5+\frac{5}{3}-1,25}$
         \item So sánh: $\sqrt{50}+\sqrt{26}+1 \quad$ và $\sqrt{168}$.
@@ -10,23 +11,30 @@
 \end{bt}
 
 \begin{bt}
+    \hfill
     \begin{enumerate}[a.]
         \item Tìm $x$ biết: $|x-2|+|3-2 x|=2 x+1$
         \item Tìm $x ; y \in Z$ biết: $x y+2 x-y=5$
-        \item Tìm x; y; z biết: $2 x=3 y ; 4 y=5 z$ và $4 x-3 y+5 z=7$
+        \item Tìm x; y; z biết: $2 x=3 y$ ; $4 y=5 z$ và $4 x-3 y+5 z=7$
     \end{enumerate}
 \loigiai{} 
 \end{bt}
 
 \begin{bt}
+    \hfill
     \begin{enumerate}[a.]
-        \item Tìm đa thức bậc hai biết $f(x)-f(x-1)=x$.\\Từ đó áp dụng tính tổng $\mathrm{S}=1+2+3+\ldots+\mathrm{n}$.
-        \item Cho $\frac{2 b z-3 c y}{a}=\frac{3 c x-a z}{2 b}=\frac{a y-2 b x}{3 c}$\\Chứng minh: $\frac{x}{a}=\frac{y}{2 b}=\frac{z}{3 c}$.
+        \item Tìm đa thức bậc hai biết $f(x)-f(x-1)=x$.
+        
+        Từ đó áp dụng tính tổng $\mathrm{S}=1+2+3+\ldots+\mathrm{n}$.
+        \item Cho $\frac{2 b z-3 c y}{a}=\frac{3 c x-a z}{2 b}=\frac{a y-2 b x}{3 c}$
+        
+        Chứng minh: $\frac{x}{a}=\frac{y}{2 b}=\frac{z}{3 c}$.
     \end{enumerate}
 \loigiai{} 
 \end{bt}
 
 \begin{bt}
+    \hfill
     Cho tam giác $\mathrm{ABC}\left(B A C<90^{\circ}\right)$, đường cao $\mathrm{AH}$. Gọi $\mathrm{E} ; \mathrm{F}$ lần lượt là điểm đối xứng của $\mathrm{H}$ qua $\mathrm{AB} ; \mathrm{AC}$, đường thẳng $\mathrm{EF}$ cắt $\mathrm{AB} ; \mathrm{AC}$ lần lượt tại $\mathrm{M}$ và $\mathrm{N}$. Chứng minh rằng:
     \begin{enumerate}[a.]
     \item $\mathrm{AE}=\mathrm{AF}$;
