--- a/deso2.tex
+++ b/deso2.tex
@@ -1,6 +1,8 @@
+\onehalfspacing
 \section{Đề số 2}
 
 \begin{bt} 
+    \hfill
     \begin{enumerate}[a.]
         \item Thực hiện phép tính: $\mathrm{A}=\frac{2^{12} \cdot 3^5-4^6 \cdot 9^2}{2^2 \cdot 3^6+8^4 \cdot 3^5}-\frac{5^{10} .7^3-25^5 .49^2}{125.7^3+5^9 \cdot 14^3}$
         \item Tính giá trị biểu thức: $\quad B=1.2 .3+2.3 .4+3.4 .5+4.5 .6+\ldots+17.18 .19$
@@ -10,6 +12,7 @@
 \end{bt}
 
 \begin{bt}
+    \hfill
     \begin{enumerate}[a.]
         \item Tìm các số $x, y, z$ biết rằng: $\quad 3 x=4 y, 5 y=6 z$ và $x y z=30$.
         \item Tìm $x$ biết:
@@ -21,13 +24,15 @@
 \end{bt}
 
 \begin{bt}
+    \hfill
     \begin{enumerate}[1.]
         \item Cho hàm số $\mathrm{y}=\mathrm{f}(\mathrm{x})=(\mathrm{m}-1) \mathrm{x}$
            \begin{enumerate}[a.]
             \item Tìm m biết: $f(2)-f(-1)=7$.
             \item Cho $m=5$. Tìm $x$ biết $f(3-2 x)=20$
            \end{enumerate}
-        \item Cho các đơn thức $\mathrm{A}=-\frac{1}{2} \mathrm{x}^2 \mathrm{yz}^2, \mathrm{~B}=-\frac{3}{4} \mathrm{xy}^2 \mathrm{z}^2, \mathrm{C}=\mathrm{x}^3 \mathrm{y}$\\
+        \item Cho các đơn thức $\mathrm{A}=-\frac{1}{2} \mathrm{x}^2 \mathrm{yz}^2, \mathrm{~B}=-\frac{3}{4} \mathrm{xy}^2 \mathrm{z}^2, \mathrm{C}=\mathrm{x}^3 \mathrm{y}$
+        
         Chứng minh rằng các đơn thức $\mathrm{A}, \mathrm{B}, \mathrm{C}$ không thể cùng nhận giá trị âm.
     \end{enumerate}
 \loigiai{} 
