--- a/main_new.tex
+++ b/main_new.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath, amsfonts, amssymb, graphicx, mathrsfs}
 \usepackage{enumerate, boxedminipage, multicol, etoolbox}
 \usepackage[shortlabels]{enumitem}
+\usepackage{setspace}
 
 %Gói căn lề giấy.
 \usepackage[top=2cm, bottom=2cm, left=1.5cm, right=1.5cm]{geometry}
