--- a/deso4.tex
+++ b/deso4.tex
@@ -1,3 +1,4 @@
+\graphicspath{{./img/}}
 \section{Đề số 4}
 
 \begin{bt} 
@@ -42,11 +43,14 @@
 \end{bt}
 
 \begin{bt}
-    \hfill
+    \begin{wrapfigure}{r}{0.35\textwidth}
+        \centering
+        \includegraphics[width=0.35\textwidth]{ds4-b5.png}
+    \end{wrapfigure}
     Trong hình bên, đường thẳng $\mathrm{OA}$ là đồ thị của hàm số $\mathrm{y}=\mathrm{f}(\mathrm{x})=\mathrm{ax}$.
     \begin{enumerate}[a.]
         \item  Tính tỉ số $\frac{\mathrm{y}_0-2}{\mathrm{x}_0-4}$.
         \item Giả sử $x_0=5$. Tính diện tích tam giác $\mathrm{OBC}$
     \end{enumerate}
-\loigiai{}
+    \loigiai{}
 \end{bt}
