--- a/main_new.tex
+++ b/main_new.tex
@@ -4,6 +4,7 @@
 \usepackage{enumerate, boxedminipage, multicol, etoolbox}
 \usepackage[shortlabels]{enumitem}
 \usepackage{setspace}
+\usepackage{wrapfig}
 
 %Gói căn lề giấy.
 \usepackage[top=2cm, bottom=2cm, left=1.5cm, right=1.5cm]{geometry}
@@ -578,4 +579,50 @@
 	\input{deso2}
 	\input{deso3}
 	\input{deso4}
+	\input{deso5}
+	\input{deso6}
+	\input{deso7}
+	\input{deso8}
+	\input{deso9}
+	\input{deso10}
+	\input{deso11}
+	\input{deso12}
+	\input{deso13}
+	\input{deso14}
+	\input{deso15}
+	\input{deso16}
+	\input{deso17}
+	\input{deso18}
+	\input{deso19}
+	\input{deso20}
+	\input{deso21}
+	\input{deso22}
+	\input{deso23}
+	\input{deso24}
+	\input{deso25}
+	\input{deso26}
+	\input{deso27}
+	\input{deso28}
+	\input{deso29}
+	\input{deso30}
+	\input{deso31}
+	\input{deso32}
+	\input{deso33}
+	\input{deso34}
+	\input{deso35}
+	\input{deso36}
+	\input{deso37}
+	\input{deso38}
+	\input{deso39}
+	\input{deso40}
+	\input{deso41}
+	\input{deso42}
+	\input{deso43}
+	\input{deso44}
+	\input{deso45}
+	\input{deso46}
+	\input{deso47}
+	\input{deso48}
+	% \input{deso49}
+	% \input{deso50}
 \end{document}
