--- a/main_new.tex
+++ b/main_new.tex
@@ -623,6 +623,6 @@
 	\input{deso46}
 	\input{deso47}
 	\input{deso48}
-	% \input{deso49}
-	% \input{deso50}
+	\input{deso49}
+	\input{deso50}
 \end{document}
